Exploit symmetry with logicore fir. Half-band is now a decimator

--- a/analysis/CoefficientSymbolicTests.ipynb
+++ b/analysis/CoefficientSymbolicTests.ipynb
@@ -151,10 +151,12 @@
     "\n",
     "def _halfBand(n):\n",
     "    ws = [0 for _ in range(n)]\n",
-    "    if n//2 % 2 == 1:\n",
-    "        ws[::2] = _type1Padded(n//2+1)[:-1]\n",
-    "    else:\n",
-    "        ws[::2] = _type1Padded(n//2)\n",
+    "    # Note that this only works for N=4(k+1)\n",
+    "    # I.e. we pad a 3+4k half-band with one zero\n",
+    "    for i in range(0,n//4):\n",
+    "        ws[i*2] = sym.Symbol('w'+str(i))\n",
+    "        ws[n//2+i*2] = sym.Symbol('w'+str(n//4 -1 - i))\n",
+    "    ws[n//2 - 1] = sym.Symbol('w'+str(n//4))\n",
     "    return ws\n",
     "\n",
     "class CoeffType(enum.Enum):\n",
@@ -223,9 +225,7 @@
     "\n",
     "def ffa_hhb(par, n):\n",
     "    p = int(log2(par))\n",
-    "    if p == 1:\n",
-    "        return 2*ceil(n/2.0)\n",
-    "    return 2 * ffa_htype1(2**(p-1), n)\n",
+    "    return 1 + 2**(p-1) + n + 4*n*sum([3**i for i in range(0,p-1)])\n",
     "\n",
     "def ffa_eqns(ctype, par, n):\n",
     "    if ctype == CoeffType.Type1Pad:\n",
@@ -254,7 +254,7 @@
     "    if ctype == CoeffType.NonLinPhase:\n",
     "        return par*taps\n",
     "    if ctype == CoeffType.HalfBand:\n",
-    "        return par*ceil(taps/4.0)"
+    "        return par*(1+taps/4.0)"
    ]
   },
   {
@@ -276,9 +276,13 @@
     "\n",
     "for p in [2,4,8,16]:\n",
     "    print(f'Running p{p}')\n",
-    "    for nByP in [1,2,3,4]:\n",
+    "    for nByP in [1,2,3,4,5]:\n",
     "        print(f'Running nByP{nByP}')\n",
     "        for coeffType in CoeffType:\n",
+    "            \n",
+    "            if coeffType == CoeffType.HalfBand and (p*nByP % 4 > 0):\n",
+    "                continue\n",
+    "                \n",
     "            ws = genCoeffs(coeffType, p*nByP)\n",
     "            \n",
     "            mults = ffa_eqns(coeffType, p, nByP)\n",
@@ -316,7 +320,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a3a8dca9-e651-4406-8d43-c330786bd7c4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "all(frame[frame['FIR']=='FFAEqn']['Mults'].values == frame[frame['FIR']=='FFA']['Mults'].values)"
@@ -370,7 +376,10 @@
     "\n",
     "for p in [2,4,8,16]:\n",
     "    for coeffType in CoeffType:\n",
-    "        for nByP in [1,2,3,4,5]:\n",
+    "        for nByP in [1,2,3,4,5,6]:\n",
+    "            if coeffType == CoeffType.HalfBand and (p*nByP % 4 > 0):\n",
+    "                continue\n",
+    "                \n",
     "            ws = genCoeffs(coeffType, p*nByP)\n",
     "            frame = frame.append(dict(\n",
     "                p=p,\n",
