--- a/analysis/ImplementationResults.ipynb
+++ b/analysis/ImplementationResults.ipynb
@@ -70,12 +70,15 @@
     "\n",
     "for par in [2,4,8,16]:\n",
     "    for taps in [2,4,8,16,32,64,128]:\n",
-    "        if par > taps:\n",
-    "            continue\n",
     "        for f_coef in coeff_constrs:\n",
     "            for f_fir in fir_constrs:\n",
     "                ws = f_coef(taps)\n",
-    "                fir = f_fir(par, taps, ws, './outputs')\n",
+    "                fir = f_fir(par, taps, ws, './outputs/util')\n",
+    "                \n",
+    "                if par > taps or \\\n",
+    "                   (isinstance(fir, SsrFilter) and par > len(ws.coeffs_no_pad)):\n",
+    "                    continue\n",
+    "                    \n",
     "                res = fir.impl()\n",
     "                print(res)\n",
     "                results.append(res)"
